--- a/config/database.yml
+++ b/config/database.yml
@@ -23,13 +23,13 @@ default: &default
 
 development:
   <<: *default
-  database: assignment_development
+  database: shubham_bhoyar_assignment_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user running Rails.
-  #username: assignment
+  #username: shubham_bhoyar_assignment
 
   # The password associated with the postgres role (username).
   #password:
@@ -57,7 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: assignment_test
+  database: shubham_bhoyar_assignment_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -81,6 +81,6 @@ test:
 #
 production:
   <<: *default
-  database: assignment_production
-  username: assignment
-  password: <%= ENV["ASSIGNMENT_DATABASE_PASSWORD"] %>
+  database: shubham_bhoyar_assignment_production
+  username: shubham_bhoyar_assignment
+  password: <%= ENV["SHUBHAM_BHOYAR_ASSIGNMENT_DATABASE_PASSWORD"] %>
