--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "version": "0.1.0",
   "devDependencies": {
     "webpack-dev-server": "^3"
+  },
+  "engines": {
+    "node": ">= 12.13.1"
   }
 }
